--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -5,6 +5,15 @@
   box-sizing: border-box;
 }
 
+#su_nav_bar {
+background-color: #00BFFF;
+border-color: #00BFFF;
+}
+
+#su_nav_bar a {
+    color: white;
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: repeat(2,1fr);
