change the su navbar format with css

--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -6,8 +6,8 @@
 }
 
 #su_nav_bar {
-background-color: #00BFFF;
-border-color: #00BFFF;
+background-color: #20B2AA;
+border-color: #20B2AA;
 }
 
 #su_nav_bar a {
