--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -6,15 +6,25 @@
 }
 
 #su_nav_bar {
-background-color: #20B2AA;
-border-color: #20B2AA;
+  overflow-x: hidden;
+  background-color: #20B2AA;
+  border-color: #20B2AA;
 }
 
 #su_nav_bar a {
-    color: white;
+  overflow-x: hidden;
+  color: white;
+}
+
+.su_dashboard_greeting {
+  position: fixed;
+  opacity:1.0;
+  top: 60px;
+  z-index: 999;
 }
 
 .wrapper {
+
   display: grid;
   grid-template-columns: repeat(2,1fr);
   grid-auto-rows: minmax(2000px, auto);
