make right navbar meny text to be white; still need to fix and clean up all the css

--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -9,6 +9,14 @@
     color: white;
 }
 
+#bs-example-navbar-collapse-1 a {
+    color: white;
+}
+
+#main-more-dropdown a {
+    color: black;
+}
+
 .second-navbar{
   top:50px;
 }
