carousel works; still need to find or adjust the right image size

--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+.right.carousel-control, .left.carousel-control {
+    display: none;
+}
+
 .navbar-inverse .navbar-brand {
     color: white;
 }
