--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -66,6 +66,15 @@
   z-index: 20;
 }
 
+#chatPanel a {
+  font-weight: bold;
+}
+
+#chatPanel-message {
+  border: 0; padding: 10px; width: 90%; margin-right: .5%;
+  bottom: 0;
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: repeat(2,1fr);
