--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -72,7 +72,7 @@
 
 #chatPanel-message {
   border: 0; padding: 10px; width: 90%; margin-right: .5%;
-  bottom: 0;
+  position: absolute; bottom: 0px;
 }
 
 .wrapper {
