add scroll area to the chat message panel

--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -75,6 +75,11 @@
   position: absolute; bottom: 0px;
 }
 
+#chatPanelBody {
+  overflow-y: scroll;
+  height: 250px;
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: repeat(2,1fr);
