--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -34,6 +34,12 @@
   top:50px;
 }
 
+#ad_nav_bar {
+  z-index: 2000;
+  background-color: rgb(0, 0, 255);
+  border-color: rgb(0, 0, 255);
+}
+
 #su_nav_bar {
   z-index: 2000;
   background-color: #20B2AA;
