--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -61,10 +61,19 @@
   height: 325px;
   /*text-align: left; Centered text/links */
   z-index: 20;
+  box-sizing:border-box;
 }
 
 #notePanel a {
   font-weight: bold;
+}
+
+#quickNoteTitle {
+  width: 100%; box-sizing:border-box;
+}
+
+#chatPanel-message-input {
+  width: 100%; box-sizing:border-box;
 }
 
 .panel-title {
@@ -85,7 +94,7 @@
 }
 
 #chatPanel-message {
-  border: 0; padding: 10px; width: 90%; margin-right: .5%;
+  border: 0; padding: 10px; width: 100%; margin-right: .5%;
   position: absolute; bottom: 0px;
 }
 
