--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -68,7 +68,12 @@
   font-weight: bold;
 }
 
+#note {
+  font-size: 16px;
+}
+
 #quickNoteTitle {
+  font-size: 16px;
   width: 100%; box-sizing:border-box;
 }
 
@@ -96,6 +101,7 @@
 #chatPanel-message {
   border: 0; padding: 10px; width: 100%; margin-right: .5%;
   position: absolute; bottom: 0px;
+  font-size: 16px;
 }
 
 #chatPanelBody {
