fix admin chat message input width

--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -85,6 +85,10 @@
   width: 100%; box-sizing:border-box;
 }
 
+#adChatPanel-message-input {
+  width: 100%; box-sizing:border-box;
+}
+
 .panel-title {
   text-align: center;
 }
